# android-utils-api

./: README.md  build.gradle  settings.gradle
CommonUtils/: build.gradle
CommonUtils/src/main/: AndroidManifest.xml
CommonUtils/src/main/res/values/: strings.xml
DroidPlugin/: AndroidManifest.xml  build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: corrdinator_activity_header_gradient.xml  ic_feedback.xml  ic_info.xml
app/src/main/res/layout/: activity_app_cutom_accessibility.xml  activity_app_foreground_service.xml  activity_app_location.xml  activity_app_long_drawable.xml  activity_app_notificaion_with_channel.xml  activity_app_request_one_location.xml  activity_app_temp.xml  activity_app_two_button.xml  activity_app_vibrator.xml  activity_app_wakelock_get_release.xml  activity_setup.xml  (+27 more)
gradle/wrapper/: gradle-wrapper.properties
simplewebserver/: build.gradle
simplewebserver/src/main/: AndroidManifest.xml
webrtcnoise/: CMakeLists.txt  build.gradle  proguard-rules.pro
webrtcnoise/src/androidTest/java/com/test/jni/: ExampleInstrumentedTest.java
webrtcnoise/src/main/: AndroidManifest.xml
webrtcnoise/src/main/cpp/: audio_ns.cpp  audio_ns.h  native-lib.cpp  noise_suppression.cpp  signal_processing_library.h
webrtcnoise/src/main/java/com/test/jni/: AudioEncodeUtil.java  MainActivity.java  WebrtcProcessor.java
webrtcnoise/src/main/res/layout/: activity_webrtc_noise_main.xml
webrtcnoise/src/main/res/values/: strings.xml
webrtcnoise/src/test/java/com/test/jni/: ExampleUnitTest.java
(+192 files in other folders)
